--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@genkit-ai/dotprompt": "^0.9.12",
     "@genkit-ai/googleai": "^1.6.2",
     "@genkit-ai/next": "^1.6.2",
     "@hookform/resolvers": "^4.1.3",
@@ -59,10 +60,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.6.1",
+    "patch-package": "^8.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.0",
-    "typescript": "^5",
-    "patch-package": "^8.0.0"
+    "typescript": "^5"
   }
 }
